[gd_scene load_steps=3 format=3 uid="uid://nytvwtkw7gpg"]

[ext_resource type="Script" path="res://scripts/audiomanager.gd" id="1_q330o"]
[ext_resource type="AudioStream" uid="uid://eykhagld8pug" path="res://assets/audio/test.wav" id="2_t1abd"]

[node name="audiomanager" type="Node"]
script = ExtResource("1_q330o")

[node name="music_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_t1abd")

[node name="effect_player" type="AudioStreamPlayer" parent="."]

[connection signal="finished" from="music_player" to="." method="_on_music_player_finished"]
